--- a/CPJ_floodinsurance.Rmd
+++ b/CPJ_floodinsurance.Rmd
@@ -23,7 +23,7 @@ urlcolor: blue
 abstract: "Welfare improving buyouts of high flood risk homes need to be carefully designed to overcome political opposition. I assemble a panel of real estate and flood insurance policy data to estimate whether holding an insurance policy impacts homeowners' likelihood of selling their home following a flood. The results are suggestive that holding insurance lowers sale probability following a flood, however confidence is low due to collinearity between the instrument and the fixed effects."
 ---
 
-[^disclaim]: Real Estate data provided by Zillow through the Zillow Transaction and Assessment Dataset (ZTRAX). More information on accessing the data can be found at <http://www.zillow.com/ztrax>. The results and opinions are those of the author and do not reflect the position of Zillow Group. NFIP Policies and Claims data provided by FEMA through the OpenFEMA API. FEMA and the Federal Government cannot vouch for the data or analyses derived from these data after the data have been retrieved from the Agency's website(s) and/or Data.gov. This product uses the Federal Emergency Management Agency’s API, but is not endorsed by FEMA.
+[^disclaim]: I thank Jim Sallee for valuable advising and guidance, Michael Anderson, Max Auffhammer, Sara Johns, and Abdou Cisse, Katherine Wagner, Arthur Wardle, and the entire 2019 ARE cohort for valuable guidance and feedback. Real Estate data provided by Zillow through the Zillow Transaction and Assessment Dataset (ZTRAX). More information on accessing the data can be found at <http://www.zillow.com/ztrax>. The results and opinions are those of the author and do not reflect the position of Zillow Group. NFIP Policies and Claims data provided by FEMA through the OpenFEMA API. FEMA and the Federal Government cannot vouch for the data or analyses derived from these data after the data have been retrieved from the Agency's website(s) and/or Data.gov. This product uses the Federal Emergency Management Agency’s API, but is not endorsed by FEMA.
 
 ```{r setup, include=FALSE}
 library(bookdown)
@@ -57,11 +57,13 @@ Flood damage prevention and recovery has been a major expenditure for every leve
 
 The most severe examples of this problem are so called severe repetitive loss (SRL) properties [@NationalFloodInsuranceProgram2020]. These structures, usually older homes not adapted by elevation to withstand regular flood damage, are insured by the National Flood Insurance Program (NFIP), and have received repeated claim payouts that exceed the value of the home, a situation that is only possible because the NFIP sets premiums below actuarially fair levels. A private insurer faced with this situation would either refuse to cover the property, or upon the filing of a claim, declare the property a total loss, much as car insurers will "total" a car following a particularly damaging crash. However, the NFIP is required by statute to provide  The NFIP was originally established by Congress to shift some of the cost and risk of development in flood prone areas from the government onto property owners. However, these pricing practices have left the NFIP with a substantial debt load, and a deficit that currently exceeds $1 billion per year [@CBO2017]. The ongoing fiscal problems of the NFIP along with its conflicting mandates of moving risk from the government to homeowners and maintaining affordability has been a topic of research and discussion for more than a decade [@Miller2019; @NationalAcademiesofSciencesandMedicine2016]. 
 
-Congress has made several attempts to reduce the working deficit of the NFIP, and any such plan will need to address SRL properties. It would be welfare improving to simply buy these properties and tear them down. Doing so would avoid the substantial insurance losses and be a net gain to society, without even having to consider the additional avoided costs for infrastructure, US Army Corps of Engineers management projects, etc. The Federal Emergency Management Agency (FEMA) has pursued buyouts of SRL properties in recent years, but these proceedings are slow, costly, and politically unpopular [@Weber2019; @Salvesen2018]. To address this problem on a broad scale, policymakers will need to think carefully about how homeowners choose whether to rebuild or relocate in the wake of a disaster. By identifying property owners who are most likely to sell their homes following a flood, the government can design a policy to purchase those homes themselves, rather than a new private buyer, and then permanently remove the home from the market. 
+Congress has made several attempts to reduce the working deficit of the NFIP, and any such plan will need to address SRL properties. It would be welfare improving to simply buy these properties and tear them down. Doing so would avoid the substantial insurance losses and be a net gain to society, without even having to consider the additional avoided costs for infrastructure, US Army Corps of Engineers management projects, etc. The Federal Emergency Management Agency (FEMA) has pursued buyouts of SRL properties in recent years, but these proceedings are slow, costly, and politically unpopular [@Weber2019; @Salvesen2018]. To address this problem on a broad scale, policymakers will need to think carefully about how homeowners choose whether to rebuild or relocate in the wake of a disaster.
 
-This paper attempts to provide evidence to support that policymaking process by exploring how holding flood insurance impacts a homeowner's decision to sell their home in the wake of a flood. To answer this question, I combine several detailed micro datasets: real estate assessment and transaction records from county public records, collected in Zillow's ZTRAX database [@ZillowGroup2020], and NFIP data on flood policies written and claims filed. Using these data, I construct a panel of home transactions, flood events, and flood insurance takeup for 2009–2016 to estimate with various lags both the main effect of floods on home sale probability, and the interaction effect of holding flood insurance and experiencing a flood on home sale probability. The matching process to combine these disparate datasets is imperfect, therefore the panel does not identify individual homes in each year. Rather, the unit of analysis is, by observation year, the set of homes in the same census tract and flood zone, and constructed in the same year.
+This paper attempts to provide evidence to support that policymaking process by exploring how holding flood insurance impacts a homeowner's decision to sell their home in the wake of a flood. By identifying property owners who are most likely to sell their homes following a flood, the government can design a policy to purchase those homes themselves, rather than a new private buyer, and then permanently remove the home from the market. Because FEMA already has an existing relationship with flood insurance policyholders, this group of flood-susceptible residents could represent an easy first group of homeowners to approach for buyouts, particularly in the wake of a flood. However, if holding flood insurance makes homeowners _less_ likely to sell their homes following a flood, then that population is not as useful when FEMA is in search of potential buyout offerings. Thus, this paper attempts to determine whether holding flood insurance impacts a homeowner's decision to sell their home in the wake of a flood.
 
-Because the choice of insurance takeup is endogenous, I instrument for insurance using exogenous price variation caused by two pieces of federal legislation: the Biggert Waters Flood Insurance Reform Act of 2012 and the Homeowner Flood Insurance Affordability Act of 2014. This approach leads to estimates of questionable validity due to potential collinearity between the instrument and year fixed effects, but they suggest that homeowners who hold flood insurance may be less likely to sell their homes following a flood. If refined and confirmed, these results would suggest, perhaps unsurprisingly, that the current structure of NFIP policies provide a particularly acute incentive to remain in flood zones following a flood event, and policymakers will need to think holistically about these incentives when designing a buyout program. 
+To answer this question, I combine several detailed micro datasets: real estate assessment and transaction records from county public records, collected in Zillow's ZTRAX database [@ZillowGroup2020], and NFIP data on flood policies written and claims filed. Using these data, I construct a panel of home transactions, flood events, and flood insurance takeup for 2009–2016 to estimate with various lags both the main effect of floods on home sale probability, and the interaction effect of holding flood insurance and experiencing a flood on home sale probability. The matching process to combine these disparate datasets is imperfect, therefore the panel does not identify individual homes in each year. Rather, the unit of analysis is, by observation year, the set of homes in the same census tract and flood zone, and constructed in the same year.
+
+Because the choice of insurance takeup is endogenous, I instrument for insurance using exogenous price variation caused by the Biggert Waters Flood Insurance Reform Act of 2012. This approach leads to estimates of questionable validity due to potential collinearity between the instrument and year fixed effects, but they suggest that homeowners who hold flood insurance may be less likely to sell their homes following a flood. If refined and confirmed, these results would suggest, perhaps unsurprisingly, that the current structure of NFIP policies provide a particularly acute incentive to remain in flood zones following a flood event, and policymakers will need to think holistically about these incentives when designing a buyout program. 
 
 This paper contributes to a growing literature on consumer responses to natural disasters, particularly floods, and the welfare and policy implications of existing flood insurance rate structures. @Gallagher2014 shows that insurance takeup is not perfectly rational, and in fact depends on salience of flood risk. @Wagner2019 tests for selection in the flood insurance market, and describes how risk misperception and other frictions in insurance takeup distort demand, and thus lead to different welfare effects of reforms than a standard expected utility framework would suggest. @Peralta2019 explore the location sorting effects of subsidized flood insurance. This paper most closely builds on the work of @Zivin2020, who test directly for the impact of hurricanes on housing markets. The authors look for impacts on housing prices and transaction probability of hurricane-force winds, and also explore the subsequent demographic changes of the new home buyers. This research follows the methodology of @Zivin2020, but uses flood events rather than wind exposure, and is not limited to high-damage events like hurricanes. 
 
@@ -73,29 +75,24 @@ This research is built upon two primary data sources: flood insurance policies, 
 
 FEMA publishes deidentified micro data on all [NFIP policies](https://www.fema.gov/openfema-data-page/openfema-dataset-fima-nfip-redacted-policies--v1) underwritten by the federal government, which covers nearly all flood insurance policies written in the United States. The data describes the amount of coverage, premiums and fees, deductibles, and attributes about the covered property. Properties are identified down to the census tract, and also have flood zone and year of construction, which I use to match with the real estate data. Flood insurance policy data are available for the years `r policies[, min(year(policyEffectiveDate))]`–`r policies[, max(year(policyEffectiveDate))]`. I discard policies that cover only home contents and not the structure itself. Figure \@ref(fig:first-stage-graph) shows insurance takeup over time, with the two major reforms to insurance premiums, Biggert-Waters and HFIAA, indicated. Takeup is shown separately for adapted and non-adapted homes, as they are subject to different premium rate schedules and different price shocks. Adapted homes are those that were constructed (or substantially renovated) after the publication of their area's first flood insurance rate map (FIRM). New or renovated homes in special flood hazard areas with an existing, published FIRM are required to be adapted by elevating the lowest occupied level of the home above a pre-defined "base flood elevation" to reduce the risk of damage from flooding.
 
-The [NFIP claims data](https://www.fema.gov/openfema-data-page/fima-nfip-redacted-claims-v1) tabulate every claim filed with the NFIP in the state from `r claims[, min(year(dateOfLoss))]` through `r claims[, max(year(dateOfLoss))]`. The data include details about the insured property, the insurance coverage, the loss event, and subsequent claim and payout. I discard claims that cover only loss of contents (either due to the policyholder not holding any building coverage, or not submitting a claim for building damage), as well as those with listed payouts that exceed the maximum coverage of $250,000. The claims data are used to identify which properties were exposed to flooding in a given year. Since a given property's vulnerability to flood damage is endogenous, through defensive investments, home elevation, etc., I define exposure to flooding by indicating whether a flood claim was filed within the intersection of a census tract and flood zone in each year. One potential issue with using insurance claims data to define flood experiences: it requires at least some homes to hold flood insurance in the exposed area. This connection may result in bias if areas holding fewer insurance policies are then less likely to register a flood event in our data, even if the true incidence of flooding is as high or higher than areas holding more insurance policies. A more comprehensive spatial flooding dataset, such as [NASA's MODIS Global Flood Mapping](https://floodmap.modaps.eosdis.nasa.gov/), could be an improvement in this methodology for future research.
-
-Finally, I also use the [national flood hazard layer](https://www.fema.gov/flood-maps/national-flood-hazard-layer) geospatial database to assign individual properties to flood zones, to allow matching with the policies and claims data.
-
 ```{r first-stage-graph, echo=FALSE, fig.cap="Flood insurance adoption, driven by Biggert-Waters, separately for adapted and non-adapted homes. The key source of variation in my first stage.", fig.dim=c(5,3.5)}
 firststage <- nctrans_panel[full_sample == TRUE, .(polfrac = sum(policy_prob) / .N), keyby = .(year, adapted_text)]
 ggplot(firststage, aes(x=year, y=polfrac)) + geom_point(aes(color = adapted_text, shape=adapted_text)) + geom_vline(xintercept=2012.5) + ggtitle("Flood Insurance Adoption Over Time") + ylab("Fraction of Homes with Flood Insurance") + geom_text(aes(x=2012.35, label="Biggert Waters Act", y=.03), angle=90) + labs(shape="Adaptation Status", color="Adaptation Status")
 ```
 
+The [NFIP claims data](https://www.fema.gov/openfema-data-page/fima-nfip-redacted-claims-v1) tabulate every claim filed with the NFIP in the state from `r claims[, min(year(dateOfLoss))]` through `r claims[, max(year(dateOfLoss))]`. The data include details about the insured property, the insurance coverage, the loss event, and subsequent claim and payout. I discard claims that cover only loss of contents (either due to the policyholder not holding any building coverage, or not submitting a claim for building damage), as well as those with listed payouts that exceed the maximum coverage of $250,000. The claims data are used to identify which properties were exposed to flooding in a given year. Since a given property's vulnerability to flood damage is endogenous, through defensive investments, home elevation, etc., I define exposure to flooding by indicating whether a flood claim was filed within the intersection of a census tract and flood zone in each year. One potential issue with using insurance claims data to define flood experiences: it requires at least some homes to hold flood insurance in the exposed area. This connection may result in bias if areas holding fewer insurance policies are then less likely to register a flood event in our data, even if the true incidence of flooding is as high or higher than areas holding more insurance policies. A more comprehensive spatial flooding dataset, such as [NASA's MODIS Global Flood Mapping](https://floodmap.modaps.eosdis.nasa.gov/), could be an improvement in this methodology for future research.
+
+Finally, I also use the [national flood hazard layer](https://www.fema.gov/flood-maps/national-flood-hazard-layer) geospatial database to assign individual properties to flood zones, to allow matching with the policies and claims data. The flood zones used in this analysis have at least a 1% chance of flooding in a given year. Homes within a given flood zone generally share a similar base flood elevation, the expected depth of flooding above which new homes are required to be elevated to reduce the risk of property damage.
+
 ## Housing Assessment and Transactions
 
 The [ZTRAX data](https://www.zillow.com/research/ztrax/) are a real estate database of properties comprised of both assessor records and real estate transaction records, compiled into a nationwide database by Zillow. The assessor data include details about the parcel and primary structure, location (street address, census tract, and latitude and longitude), and value (assessed and market values). This table is used to identify the sample of North Carolina homes. I limit the sample to single family homes, excluding rural residences (homes on productive agricultural land) as well as condominiums and similar structures. Assessment data are available from `r sfha_homes[, min(year(record_date))]` through `r sfha_homes[, max(year(record_date))]`.
 
-The transaction data contains information about every real estate transaction recorded for the parcels in the assessor data. The records include the date and type of transaction, information about the buyer, seller, and lender, if applicable, sale price and any taxes, and mortgage information. These data require extensive filtering to identify the set of records that correspond to "arm's length" transactions that correspond to true home sales, rather than refinancing, transfers to family members, or liens. Data are available for transactions from `r nctrans_panel[, min(year, na.rm = TRUE)]` through `r nctrans_panel[, max(year, na.rm = TRUE)]`. I discard homes that were built in the same year as their area's first flood insurance rate map (FIRM) which determines adaptation requirements, since the requirement within the same year is ambiguous, as well as homes with unrecorded years of construction. Figure \@ref(fig:trans-prob) shows the fraction of homes sold in a given sample year, separately for adapted and nonadapted homes. Depending on the number of lags, transactions in 2011 are sometimes excluded from the analysis. 
-
-```{r trans-prob, echo=FALSE, fig.cap="Graph of home sale probability over time, separately for adapted and nonadapted homes.", fig.dim=c(5,3.5)}
-transtime <- nctrans_panel[full_sample == TRUE, .(transfrac = mean(transaction_obs)), keyby = .(year, adapted_text)]
-ggplot(transtime, aes(x=year, y=transfrac)) + geom_point(aes(color = adapted_text, shape=adapted_text)) + geom_vline(xintercept=2012.5) + ggtitle("Home Sale Probability Over Time") + ylab("Probability of Home Sale") + geom_text(aes(x=2012.35, label="Biggert Waters Act", y=.055), angle=90)
-```
+The transaction data contains information about every real estate transaction recorded for the parcels in the assessor data. The records include the date and type of transaction, information about the buyer, seller, and lender, if applicable, sale price and any taxes, and mortgage information. These data require extensive filtering to identify the set of records that correspond to "arm's length" transactions that correspond to true home sales, rather than refinancing, transfers to family members, or liens. Data are available for transactions from `r nctrans_panel[, min(year, na.rm = TRUE)]` through `r nctrans_panel[, max(year, na.rm = TRUE)]`. I discard homes that were built in the same year as their area's first flood insurance rate map (FIRM) which determines adaptation requirements, since the requirement within the same year is ambiguous, as well as homes with unrecorded years of construction.
 
 ## Constructed Panel
 
-My analysis sample is comprised of arm's length transactions of single family homes in North Carolina special flood hazard areas, using data from 2009–2016. Because the flood insurance data are not available at the individual home level, I aggregate the data to the level of census tract, flood zone, and year of home construction. From these data, I construct a yearly panel of these cells of homes, defining the fraction of homes in each cell that were sold and hold a flood insurance policy, as well as whether the homes were exposed to a flood event. Since selling a home is often a time consuming process, I look across multiple years to find effects, so I create lagged variables of flood events and insurance policies. Because the range of years in my panel is limited, the choice of lags limits the sample size of the panel. With 2 lags, I can consider sales from 2011–2016, while 3 lags restricts the panel to 2012–2016. I restrict the panel to include only homes built before 2009, so no homes enter the dataset in the middle of the analysis period. Because the NFIP data extends beyond the housing data, I also create one year lead variables of flood events and insurance policies as a check for pretrends without reducing the sample size of the panel. Table \@ref(tab:panel-summary-stats) provides summary statistics for the panel as used in this analysis.
+My analysis sample is comprised of arm's length transactions of single family homes in North Carolina special flood hazard areas, using data from 2009–2016. Because the flood insurance data are not available at the individual home level, I must imperfectly match flood insurance policies to homes by census tract, flood zone, and year of home construction. From these data, I construct a yearly panel of homes, defining the fraction of matched homes that hold a flood insurance policy as the probability that home holds a policy. In addition, I construct variables for whether each home was sold in that year, and whether the home was exposed to a flood event. I restrict the panel to include only homes built before 2009, so no homes enter the dataset in the middle of the analysis period. Table \@ref(tab:panel-summary-stats) provides summary statistics for the panel as used in this analysis.
 
 ```{r panel-summary-stats, echo=FALSE, warning=FALSE}
 # panel descriptive statistics table. n, T, N, average homes per cell, average policies per cell
@@ -157,11 +154,19 @@ stargazer(transprob_flood_dd, transprob_flood_es, type=ifelse(knitr::is_latex_ou
 
 # Model
 
-My research question is twofold: first, does experiencing a flood lead homeowners to sell their properties, and second, does holding flood insurance mediate this effect. To explore these questions, I apply an event study framework to this panel dataset. The main estimating equation is
-$$P(transaction_{lit}) = \sum_{\tau} \left[\alpha_{\tau} Insurance_{lit+\tau} + \beta_{\tau} Flood_{lt+\tau} + \gamma_{\tau} (Flood_{lt+\tau} \times Insurance_{lit+\tau}) \right] + \delta_l + \delta_t + \varepsilon_{lit}$$
-The unit of analysis is a set of homes in a particular census tract and flood zone, constructed in the same year, by year of observation. This panel structure is the closest feasible approximation to a house-year panel, given the limitations of my imperfect matching strategy. In the estimating equation, $l$ indexes locations (the intersection of a census tract and a flood zone), $i$ indexes the set of homes constructed in the same year, and $t$ indexes the year of observation. Together, the subscript $lit$ indexes a single observation. The lag indexer $\tau$ takes on values from -3 (a three year lag) to +1 (a one year lead). The model includes location and year fixed effects, and standard errors are clustered at the census tract level. The outcome variable of this linear probability model is the sale probability of homes in the cell in a given year, and the regressors include an indicator for a flood event occurring, $Flood$, and the fraction of homes with flood insurance, $Insurance$, in the given observation year (with the relevant lags). 
+My research question is twofold: first, does experiencing a flood lead homeowners to sell their properties, and second, does holding flood insurance mediate this effect. To explore these questions, I apply a difference-in-differences approach to a linear probability model, regressing an indicator for whether the home is sold within two years of the observation year on whether the home is exposed to flooding, whether the home holds flood insurance (imperfectly matched), and the interaction of the two in a given observation year:
+$$Transaction_{lict} = \alpha Insurance_{lct} + \beta Flood_{lt} + \gamma (Flood_{lt} \times Insurance_{lct}) + \varepsilon_{lict}$$
+The regression also includes fixed effects for location (the intersection of a census tract and a flood zone), year, year of home construction, and whether the home is subject to an adaptation requirement (which is a combination of location and year of construction). The unit of analysis is an individual home in a given year. In the estimating equation, $l$ indexes locations (the intersection of a census tract and a flood zone), $i$ indexes an individual home, $c$ indexes year of construction, and $t$ indexes the year of observation. Together, the subscript $lict$ indexes a single observation. 
 
-Because the choice to purchase flood insurance is endogenous, I instrument for insurance takeup using two exogenous policy shocks that changed flood insurance rate schedules. The Biggert Waters Flood Insurance Reform Act of 2012 and the Homeowner Flood Insurance Affordability Act of 2014 made several changes to NFIP rate schedules starting in 2013 and 2015, respectively. Some of the rate changes applied to all insured homes, while others applied differently to adapted and non-adapted homes. Homes built or substantially renovated after the adoption of the first FIRM panel covering the property are required to be adapted in their design to reduce the risk of flood damage, primarily through elevation of the lowest occupied level of the home. These policy changes will provide exogenous policy variation to identify the effect of holding flood insurance. The adapted status is defined by the year of home construction relative to the year of FIRM adoption. 
+Since selling a home is often a time consuming process, I look across multiple years to observe a home sale. Because the transaction data ends in 2016, I restrict the sample of years in this regression to 2009–2014, in order to observe two additional years of potential transactions following the final year of observations. This approach is my preferred specification to most effectively detect an effect on home transactions. 
+
+Because the effect may accumulate over time, however, I also want to estimate the effect separately in different years relative to a flood. To that end, I also estimate an event study form of this regression. This estimation approach regresses an indicator for whether the home was sold _in the observation year_ on the same flood and insurance variables as in the earlier specification, but with several years of lag and lead variables:
+$$P(transaction_{lit}) = \sum_{\tau} \left[\alpha_{\tau} Insurance_{lit+\tau} + \beta_{\tau} Flood_{lt+\tau} + \gamma_{\tau} (Flood_{lt+\tau} \times Insurance_{lit+\tau}) \right] + \varepsilon_{lit}$$
+As before, the regression also includes fixed effects for location (the intersection of a census tract and a flood zone), year, year of home construction, and whether the home is subject to an adaptation requirement. The unit of analysis is again a single house in a single year, and the meaning of the subscripts is as before. The lag indexer $\tau$ takes on values from -3 (a three year lag) to +1 (a one year lead), allowing me to study how the effect on home sales changes over time. In order to have a full set of lags, I restrict the years of the sample based on the number of lags included. With two lags, I can consider sales from 2011–2016, while three lags restricts the panel to 2012–2016.  Because the NFIP data extends beyond the housing data, I can create one year lead variables of flood events and insurance policies as a check for pretrends without reducing the sample size of the panel. 
+
+Because the choice to purchase flood insurance is endogenous, I instrument for insurance takeup using an exogenous policy shock that changed flood insurance rate schedules. The Biggert Waters Flood Insurance Reform Act of 2012 made several changes to NFIP rate schedules starting in 2013. In particular, Biggert Waters mandated annual premium increases that applied differently for adapted and non-adapted homes. Homes built or substantially renovated after the adoption of the first FIRM panel covering the property are required to be adapted in their design to reduce the risk of flood damage, primarily through elevation of the lowest occupied level of the home. The adapted status is defined by the year of home construction relative to the year of FIRM adoption. Biggert Waters put in place mandated premium increases for older, non-adapted homes, but did not include any mandates or policy changes that may impact home sales other than through flood insurance. This policy change will provide exogenous policy variation to identify the effect of holding flood insurance. In particular, I instrument using the interaction of an indicator variable for the years after Biggert Waters was passed and the home's adaptation status ($\mathbb{I}(\textrm{year} > 2012) \times \mathbb{I}(\mathrm{adapted})$). This instrument structure allows me to leverage the exogenous variation from the _differential_ price shocks between adapted and non-adapted homes, while still including year fixed effects, which would not be possible if instrumenting only with the year dummy $\mathbb{I}(\textrm{year} > 2012)$.
+
+Table \@ref(tab:first-stage-output) shows example first stage regressions for both the difference-in-difference and event study specifications. Because insurance takeup appears both as a main effect and an interaction effect (and each again with multiple lag terms in the event study), the Biggert Waters-induced exogenous price variation, when lagged and interacted with flood experience, needs to provide enough exogenous variation to instrument for the multiple appearances of the endogenous variable in the specification. This requirement may be of concern, particularly for the event study specification with several lags, and additional exogenous variation could be useful to better identify the multiple endogenous regressors.
 
 ```{r first-stage-policy, include=FALSE}
 FS_policy_prob <- felm(policy_prob ~ flood_event*(reg_reform:adapted) + adapted | panel_id + year + YearBuilt
@@ -209,7 +214,14 @@ stargazer(FS_policy_prob, FS_policy_fld_prob, FS_policy_prob_lags, FS_policy_fld
           notes = "\\parbox[t]{0.3\\textwidth}{Fixed effects: census tract x flood zone, observation year, and home construction year. Clustering: census tract.}")
 ```
 
-This econometric approach requires two identification assumptions: first, the probability of a home experiencing flooding is exogenous, conditional on census tract, flood zone, and adaptation status. Second, any time trends in transaction probability must be common to adapted and non-adapted homes. Without common time trends, none of the variation in prices from the policy changes will be exogenous, even the differential variation between adapted and non-adapted homes, violating the exclusion restriction. 
+This econometric approach requires two identification assumptions: first, the probability of a home experiencing flooding is exogenous, conditional on census tract, flood zone, and adaptation status. Obviously, floods are highly spatially and temporally correlated, and homeowners can undertake substantial defensive investments (primarily though elevation) to reduce their risk. But by defining a flood event at the census tract x flood zone level, we exclude the peculiarities of a given house, and think only about the generalized flood risk in the local area. Once we control for these broader spatial effects, exogeneity of flood probability is much more credible.
+
+The second identification assumption is that any time trends in transaction probability must be common to adapted and non-adapted homes. Our instrument for insurance leverages _differential_ price changes for adapted and non-adapted homes, so common time trends do not effect the coefficient estimates, but differential time trends will violate the exclusion restriction and yield biased estimates. While it is certainly possible that older and newer homes had diverging sale trends during this period, the threshold year defining adapted and non-adapted homes differed in different areas depending on the first FIRM published for the region, ranging primarily from the mid-1970s to the mid-1990s, with some initial FIRMs established even later. This diversity of adaptation years will hopefully dilute any differing trends driven by home construction year. Figure \@ref(fig:trans-prob) shows the fraction of homes sold in a given sample year, separately for adapted and non-adapted homes. While the probability levels are different, the trends appear to be similar in the two series, lending credence to this identification assumption.
+
+```{r trans-prob, echo=FALSE, fig.cap="Graph of home sale probability over time, separately for adapted and nonadapted homes.", fig.dim=c(5,3.5)}
+transtime <- nctrans_panel[full_sample == TRUE, .(transfrac = mean(transaction_obs)), keyby = .(year, adapted_text)]
+ggplot(transtime, aes(x=year, y=transfrac)) + geom_point(aes(color = adapted_text, shape=adapted_text)) + geom_vline(xintercept=2012.5) + ggtitle("Home Sale Probability Over Time") + ylab("Probability of Home Sale") + geom_text(aes(x=2012.35, label="Biggert Waters Act", y=.055), angle=90)
+```
 
 # Results
 
